--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,57 +10,37 @@
     "# -*- coding: utf-8 -*-\n",
     "import pandas as pd\n",
     "from ckip_transformers.nlp import CkipWordSegmenter, CkipPosTagger, CkipNerChunker\n",
-    "from IPython.display import HTML\n"
+    "from IPython.display import display\n",
+    "from IPython.display import HTML\n",
+    "import IPython.core.display as di # Example: di.display_html('<h3>%s:</h3>' % str, raw=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "HTML('''<script>\n",
-    "code_show=true; \n",
-    "function code_toggle() {\n",
-    " if (code_show){\n",
-    " $('div.input').hide();\n",
-    " } else {\n",
-    " $('div.input').show();\n",
-    " }\n",
-    " code_show = !code_show\n",
-    "} \n",
-    "$( document ).ready(code_toggle);\n",
-    "</script>\n",
-    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'HTML' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-106-056eef8143a1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mtext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdocument2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m HTML('''<script>\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[0mcode_show\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtrue\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m function code_toggle() {\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'HTML' is not defined"
-     ]
+     "output_type": "display_data",
+     "data": {
+      "text/html": "<script>jQuery(function() {if (jQuery(\"body.notebook_app\").length == 0) { jQuery(\".input_area\").toggle(); jQuery(\".prompt\").toggle();}});</script>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": "<button onclick=\"jQuery('.input_area').toggle(); jQuery('.prompt').toggle();\">Toggle code</button>"
+     },
+     "metadata": {}
     }
    ],
    "source": [
+    "\n",
+    "# This line will hide code by default when the notebook is exported as HTML\n",
+    "di.display_html('<script>jQuery(function() {if (jQuery(\"body.notebook_app\").length == 0) { jQuery(\".input_area\").toggle(); jQuery(\".prompt\").toggle();}});</script>', raw=True)\n",
+    "\n",
+    "\n",
     "document1 = [\"（台灣英文新聞／醫藥組　綜合報導）中央流行疫情指揮中心今(4)日公布國內新增2例武漢肺炎（COVID-19）境外移入確定病例(案960、961)，分別自奈及利亞及菲律賓入境。\",\n",
     "\"指揮中心表示，案960為奈及利亞籍50多歲男性，長期居住台灣，並持有我國居留證，今(2021)年1月8日返回奈及利亞奔喪，在當地曾於1月18日出現輕微咳嗽，經自行服藥後症狀緩解。\",\n",
     "\"個案2月28日返台，持有搭機前3日內檢驗陰性報告，入境後至防疫旅館檢疫，3月2日因全身倦怠及有慢性病之就醫需求，由衛生單位安排就醫採檢，於今日確診。個案就醫時接觸之相關人員皆有適當防護，故無匡列接觸者。\",\n",
@@ -76,7 +56,11 @@
     "\"指揮中心統計，截至目前國內累計960例武漢肺炎，分別為844例境外移入，77例本土病例，36例敦睦艦隊、2例航空器感染及1例不明；另1例（案530）移除為空號。確診個案中9人死亡、928人解除隔離、23人住院隔離中。\",]\n",
     "text = []\n",
     "text.append(document1)\n",
-    "text.append(document2)"
+    "text.append(document2)\n",
+    "\n",
+    "\n",
+    "# This line will add a button to toggle visibility of code blocks, for use with the HTML export version\n",
+    "di.display_html('''<button onclick=\"jQuery('.input_area').toggle(); jQuery('.prompt').toggle();\">Toggle code</button>''', raw=True)"
    ]
   },
   {
