--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -12,7 +12,12 @@
     "from ckip_transformers.nlp import CkipWordSegmenter, CkipPosTagger, CkipNerChunker\n",
     "from IPython.display import display\n",
     "from IPython.display import HTML\n",
-    "import IPython.core.display as di # Example: di.display_html('<h3>%s:</h3>' % str, raw=True)\n"
+    "import IPython.core.display as di # Example: di.display_html('<h3>%s:</h3>' % str, raw=True)\n",
+    "# This line will hide code by default when the notebook is exported as HTML\n",
+    "di.display_html('<script>jQuery(function() {if (jQuery(\"body.notebook_app\").length == 0) { jQuery(\".input_area\").toggle(); jQuery(\".prompt\").toggle();}});</script>', raw=True)\n",
+    "\n",
+    "# This line will add a button to toggle visibility of code blocks, for use with the HTML export version\n",
+    "di.display_html('''<button onclick=\"jQuery('.input_area').toggle(); jQuery('.prompt').toggle();\">Toggle code</button>''', raw=True)"
    ]
   },
   {
@@ -37,8 +42,6 @@
    ],
    "source": [
     "\n",
-    "# This line will hide code by default when the notebook is exported as HTML\n",
-    "di.display_html('<script>jQuery(function() {if (jQuery(\"body.notebook_app\").length == 0) { jQuery(\".input_area\").toggle(); jQuery(\".prompt\").toggle();}});</script>', raw=True)\n",
     "\n",
     "\n",
     "document1 = [\"（台灣英文新聞／醫藥組　綜合報導）中央流行疫情指揮中心今(4)日公布國內新增2例武漢肺炎（COVID-19）境外移入確定病例(案960、961)，分別自奈及利亞及菲律賓入境。\",\n",
@@ -57,10 +60,7 @@
     "text = []\n",
     "text.append(document1)\n",
     "text.append(document2)\n",
-    "\n",
-    "\n",
-    "# This line will add a button to toggle visibility of code blocks, for use with the HTML export version\n",
-    "di.display_html('''<button onclick=\"jQuery('.input_area').toggle(); jQuery('.prompt').toggle();\">Toggle code</button>''', raw=True)"
+    "\n"
    ]
   },
   {
