--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -1,43 +1,80 @@
 {
  "cells": [
   {
+   "source": [
+    "# 0. Load package"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-118-682687bdf839>, line 9)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-118-682687bdf839>\"\u001b[1;36m, line \u001b[1;32m9\u001b[0m\n\u001b[1;33m    function toggler(){\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "#!/usr/bin/python\n",
     "# -*- coding: utf-8 -*-\n",
     "import pandas as pd\n",
     "from ckip_transformers.nlp import CkipWordSegmenter, CkipPosTagger, CkipNerChunker\n",
     "from IPython.display import display\n",
-    "from IPython.display import HTML\n",
-    "import IPython.core.display as di # Example: di.display_html('<h3>%s:</h3>' % str, raw=True)\n",
-    "# This line will hide code by default when the notebook is exported as HTML\n",
-    "di.display_html('<script>jQuery(function() {if (jQuery(\"body.notebook_app\").length == 0) { jQuery(\".input_area\").toggle(); jQuery(\".prompt\").toggle();}});</script>', raw=True)\n",
-    "\n",
-    "# This line will add a button to toggle visibility of code blocks, for use with the HTML export version\n",
-    "di.display_html('''<button onclick=\"jQuery('.input_area').toggle(); jQuery('.prompt').toggle();\">Toggle code</button>''', raw=True)"
+    "from IPython.display import HTML"
    ]
   },
   {
+   "source": [
+    "%%javascript\n",
+    "function toggler(){\n",
+    "    if(window.already_toggling){\n",
+    "        // Don't add multiple buttons.\n",
+    "        return 0\n",
+    "    }\n",
+    "    let btn = $('.input').append('<button>Toggle Code</button>')\n",
+    "        .children('button');\n",
+    "    btn.on('click', function(e){\n",
+    "        let tgt = e.currentTarget;\n",
+    "        $(tgt).parent().children('.inner_cell').toggle()\n",
+    "    })\n",
+    "    window.already_toggling = true;\n",
+    "}\n",
+    "// Since javascript cells are executed as soon as we load\n",
+    "// the notebook (if it's trusted), and this cell might be at the\n",
+    "// top of the notebook (so is executed first), we need to\n",
+    "// allow time for all of the other code cells to load before\n",
+    "// running. Let's give it 5 seconds.\n",
+    "\n",
+    "setTimeout(toggler, 5000);"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "# 1. Load  data "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
-     "data": {
-      "text/html": "<script>jQuery(function() {if (jQuery(\"body.notebook_app\").length == 0) { jQuery(\".input_area\").toggle(); jQuery(\".prompt\").toggle();}});</script>"
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/html": "<button onclick=\"jQuery('.input_area').toggle(); jQuery('.prompt').toggle();\">Toggle code</button>"
-     },
-     "metadata": {}
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "文件一\n（台灣英文新聞／醫藥組　綜合報導）中央流行疫情指揮中心今(4)日公布國內新增2例武漢肺炎（COVID-19）境外移入確定病例(案960、961)，分別自奈及利亞及菲律賓入境。\n指揮中心表示，案960為奈及利亞籍50多歲男性，長期居住台灣，並持有我國居留證，今(2021)年1月8日返回奈及利亞奔喪，在當地曾於1月18日出現輕微咳嗽，經自行服藥後症狀緩解。\n個案2月28日返台，持有搭機前3日內檢驗陰性報告，入境後至防疫旅館檢疫，3月2日因全身倦怠及有慢性病之就醫需求，由衛生單位安排就醫採檢，於今日確診。個案就醫時接觸之相關人員皆有適當防護，故無匡列接觸者。\n案961為菲律賓籍20多歲男性移工，今年2月9日來台工作，持有搭機前3日內檢驗陰性報告，入境後至集中檢疫所檢疫，2月22日接受檢疫期滿前採檢，結果為陰性。\n個案檢疫期滿後，由仲介安排至其他住所自主健康管理，2月26日搭乘專車至醫院自費採檢，因核酸檢測未確定，27日先行收治住院隔離，同日及3月2日進行核酸檢驗，於今日確診。\n個案入境至今無症狀，已掌握個案接觸者共9人，其中同車移工8人未確實佩戴口罩，列居家隔離，司機1人因有適當防護，列自主健康管理。\n指揮中心統計，截至目前國內累計960例確診，分別為844例境外移入，77例本土病例，36例敦睦艦隊、2例航空器感染及1例不明；另1例(案530)移除為空號。確診個案中9人死亡、928人解除隔離、23人住院隔離中。\n文件一\n〔記者林惠琴／台北報導〕中央流行疫情指揮中心今日公布，武漢肺炎（新型冠狀病毒病，COVID-19）新增2例境外移入，分別自奈及利亞及菲律賓入境。\n指揮中心發言人莊人祥表示，新增的案960為奈及利亞籍50多歲男性，長期居住台灣，並持有我國居留證，今年1月8日返回奈及利亞奔喪，在當地曾於1月18日出現輕微咳嗽，經自行服藥後症狀緩解。\n該名個案2月28日返台，持有搭機前3日內檢驗陰性報告，入境後至防疫旅館檢疫，3月2日因全身倦怠及有慢性病之就醫需求，由衛生單位安排就醫採檢，於今日確診。就醫時接觸相關人員皆有適當防護，無匡列接觸者。\n案961為菲律賓籍20多歲男性移工，今年2月9日來台工作，持有搭機前3日內檢驗陰性報告，入境後至集中檢疫所檢疫，2月22日接受檢疫期滿前採檢，結果為陰性，檢疫期滿後，由仲介安排至其他住所自主健康管理，2月26日搭乘專車至醫院自費採檢，因核酸檢測未確定，27日先行收治住院隔離，同日及3月2日進行核酸檢驗，於今日確診。\n該名個案入境至今無症狀，已掌握個案接觸者共9人，其中同車移工8人未確實佩戴口罩，列居家隔離，司機1人因有適當防護，列自主健康管理。\n指揮中心統計，截至目前國內累計960例武漢肺炎，分別為844例境外移入，77例本土病例，36例敦睦艦隊、2例航空器感染及1例不明；另1例（案530）移除為空號。確診個案中9人死亡、928人解除隔離、23人住院隔離中。\n"
+     ]
     }
    ],
    "source": [
@@ -60,6 +97,13 @@
     "text = []\n",
     "text.append(document1)\n",
     "text.append(document2)\n",
+    "\n",
+    "print(\"文件一\")\n",
+    "for doc1 in document1:\n",
+    "    print(doc1)\n",
+    "print(\"文件二\")\n",
+    "for doc2 in document2:\n",
+    "    print(doc2)\n",
     "\n"
    ]
   },
