--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -66,20 +66,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "文件一\n（台灣英文新聞／醫藥組　綜合報導）中央流行疫情指揮中心今(4)日公布國內新增2例武漢肺炎（COVID-19）境外移入確定病例(案960、961)，分別自奈及利亞及菲律賓入境。\n指揮中心表示，案960為奈及利亞籍50多歲男性，長期居住台灣，並持有我國居留證，今(2021)年1月8日返回奈及利亞奔喪，在當地曾於1月18日出現輕微咳嗽，經自行服藥後症狀緩解。\n個案2月28日返台，持有搭機前3日內檢驗陰性報告，入境後至防疫旅館檢疫，3月2日因全身倦怠及有慢性病之就醫需求，由衛生單位安排就醫採檢，於今日確診。個案就醫時接觸之相關人員皆有適當防護，故無匡列接觸者。\n案961為菲律賓籍20多歲男性移工，今年2月9日來台工作，持有搭機前3日內檢驗陰性報告，入境後至集中檢疫所檢疫，2月22日接受檢疫期滿前採檢，結果為陰性。\n個案檢疫期滿後，由仲介安排至其他住所自主健康管理，2月26日搭乘專車至醫院自費採檢，因核酸檢測未確定，27日先行收治住院隔離，同日及3月2日進行核酸檢驗，於今日確診。\n個案入境至今無症狀，已掌握個案接觸者共9人，其中同車移工8人未確實佩戴口罩，列居家隔離，司機1人因有適當防護，列自主健康管理。\n指揮中心統計，截至目前國內累計960例確診，分別為844例境外移入，77例本土病例，36例敦睦艦隊、2例航空器感染及1例不明；另1例(案530)移除為空號。確診個案中9人死亡、928人解除隔離、23人住院隔離中。\n文件一\n〔記者林惠琴／台北報導〕中央流行疫情指揮中心今日公布，武漢肺炎（新型冠狀病毒病，COVID-19）新增2例境外移入，分別自奈及利亞及菲律賓入境。\n指揮中心發言人莊人祥表示，新增的案960為奈及利亞籍50多歲男性，長期居住台灣，並持有我國居留證，今年1月8日返回奈及利亞奔喪，在當地曾於1月18日出現輕微咳嗽，經自行服藥後症狀緩解。\n該名個案2月28日返台，持有搭機前3日內檢驗陰性報告，入境後至防疫旅館檢疫，3月2日因全身倦怠及有慢性病之就醫需求，由衛生單位安排就醫採檢，於今日確診。就醫時接觸相關人員皆有適當防護，無匡列接觸者。\n案961為菲律賓籍20多歲男性移工，今年2月9日來台工作，持有搭機前3日內檢驗陰性報告，入境後至集中檢疫所檢疫，2月22日接受檢疫期滿前採檢，結果為陰性，檢疫期滿後，由仲介安排至其他住所自主健康管理，2月26日搭乘專車至醫院自費採檢，因核酸檢測未確定，27日先行收治住院隔離，同日及3月2日進行核酸檢驗，於今日確診。\n該名個案入境至今無症狀，已掌握個案接觸者共9人，其中同車移工8人未確實佩戴口罩，列居家隔離，司機1人因有適當防護，列自主健康管理。\n指揮中心統計，截至目前國內累計960例武漢肺炎，分別為844例境外移入，77例本土病例，36例敦睦艦隊、2例航空器感染及1例不明；另1例（案530）移除為空號。確診個案中9人死亡、928人解除隔離、23人住院隔離中。\n"
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "unmatched '}' (<ipython-input-120-e5fbbd9061cf>, line 4)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-120-e5fbbd9061cf>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    }\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unmatched '}'\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "\n",
+    "{\n",
+    "    \"tags\": [\n",
+    "        \"remove-output\",\n",
+    "    ]\n",
+    "}\n",
     "\n",
     "document1 = [\"（台灣英文新聞／醫藥組　綜合報導）中央流行疫情指揮中心今(4)日公布國內新增2例武漢肺炎（COVID-19）境外移入確定病例(案960、961)，分別自奈及利亞及菲律賓入境。\",\n",
     "\"指揮中心表示，案960為奈及利亞籍50多歲男性，長期居住台灣，並持有我國居留證，今(2021)年1月8日返回奈及利亞奔喪，在當地曾於1月18日出現輕微咳嗽，經自行服藥後症狀緩解。\",\n",
